--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.android.gms:play-services-ads:8.3.0'
+    testCompile "org.robolectric:robolectric:3.0"
+    compile 'org.mockito:mockito-core:2.0.43-beta'
 }
