--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:8.3.0'
     testCompile "org.robolectric:robolectric:3.0"
     compile 'org.mockito:mockito-core:2.0.43-beta'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 }
