--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,12 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        ndk {
+            moduleName "love"         //生成的so名字
+            abiFilters "armeabi", "armeabi-v7a", "x86"  //输出指定三种abi体系结构下的so库。目前可有可无。
+
+        }
     }
     buildTypes {
         release {
@@ -22,10 +28,10 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    testCompile "org.robolectric:robolectric:3.0"
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
-    compile 'com.google.android.gms:play-services-ads:8.3.0'
-    testCompile "org.robolectric:robolectric:3.0"
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'org.mockito:mockito-core:2.0.43-beta'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
 }
