--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'org.mockito:mockito-core:2.0.43-beta'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'io.reactivex:rxjava:1.1.3'
 }
